--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
       <!--Main Navigation-->
   <header>
+    <img src="IMG.jpg" style="height:100vh;"/>
     <style>
       #intro {
         background-image: url("IMG.jpg");
