--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <style>
       #intro {
-        background-image: url("IMG.jpg");
+        background-image: url("test.jpg");
         height: 100vh;
       }
 
