adding new section with projectlinks

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>My Page</title>
+    <title>Viktor Ekström</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
     <!-- Google Fonts Roboto -->
@@ -140,6 +140,41 @@
             <p><strong>What is this site?</strong></p>
             <p class="text-muted">
               In reality, for now, I have no idea what can be expected of this page. But I'm sure it will happen a lot. 
+            </p>
+          </div>
+        </div>
+      </section>
+      <!--Section: Content-->
+
+      <hr class="my-5" />
+
+      <section>
+        <div class="row">
+          <div class="col-md-6 gx-5 mb-4 d-flex align-items-center justify-content-center text-center h-100">
+            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
+              <img src="robofriends.jpg" class="img-fluid img shadow-2-strong" style="margin-bottom: 10px;" />
+              <a href="#!">
+                <div class="mask masker" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </a>
+
+              <img src="smartbrain.jpg" class="img-fluid img shadow-2-strong" />
+              <a href="#!">
+                <div class="mask masker" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-md-6 gx-5 mb-4">
+            <h4><strong>Some of my projects so far</strong></h4>
+            <p><strong>RoboFriends</strong></p>
+            <p class="text-muted">
+              The first project I created was called RoboFriends, which is
+              an app built with react to enable states within the app. This
+              minimizes the work the DOM has to perform. React is a very popular tool for front end development which I will learn more about in the future! Link to the webpage --> <a href="https://viktorlinus.github.io/robo_friends/" target="_blank">https://viktorlinus.github.io/robo_friends/</a>
+            </p>
+            <p><strong>SmartBrain API</strong></p>
+            <p class="text-muted">
+              The second app utilizes an API to recognize faces that you provide for it. The app has a login and register function which is conected to a database that stores your information, as well as keeps track of how many times you have given it a face to recognize. The app's front- and backend as well as the database is deployed on Heroku. Check out the website here --> <a href="https://smart-brain-front-end-app.herokuapp.com/" target="_blank">https://smart-brain-front-end-app.herokuapp.com/</a>
             </p>
           </div>
         </div>
