--- a/index.html
+++ b/index.html
@@ -150,16 +150,15 @@
 
       <section>
         <div class="row">
-          <div class="col-md-6 gx-5 mb-4 d-flex align-items-center justify-content-center text-center h-100">
-            <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-              <img src="robofriends.jpg" class="img-fluid img shadow-2-strong" style="margin-bottom: 10px;" />
+          <div class="col-md-6 gx-5 mb-4 d-flex align-items-center justify-content-center text-center ">
+            <div class="">
+              <img src="robofriends.jpg" class="img-fluid  shadow-2-strong" style="margin-bottom: 20px;" />
               <a href="#!">
-                <div class="mask masker" style="background-color: rgba(251, 251, 251, 0.15);"></div>
               </a>
 
-              <img src="smartbrain.jpg" class="img-fluid img shadow-2-strong" />
+              <img src="smartbrain.jpg" class="img-fluid  shadow-2-strong" />
               <a href="#!">
-                <div class="mask masker" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          
               </a>
             </div>
           </div>
@@ -174,7 +173,7 @@
             </p>
             <p><strong>SmartBrain API</strong></p>
             <p class="text-muted">
-              The second app utilizes an API to recognize faces that you provide for it. The app has a login and register function which is conected to a database that stores your information, as well as keeps track of how many times you have given it a face to recognize. The app's front- and backend as well as the database is deployed on Heroku. Check out the website here --> <a href="https://smart-brain-front-end-app.herokuapp.com/" target="_blank">https://smart-brain-front-end-app.herokuapp.com/</a>
+              The second app utilizes an API to recognize faces that you provide for it. The app has a login and register function which is conected to a database that stores your information, as well as keeps track of how many times you have given it a face to recognize. The app's front- and backend as well as the database is deployed on Heroku. Check out the website here --> <a href="https://smart-brain-front-end-app.herokuapp.com/">https://smart-brain-front-end-app.herokuapp.com/</a>
             </p>
           </div>
         </div>
