--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <div class="col-md-6 gx-5 mb-4 d-flex align-items-center justify-content-center text-center ">
             <div class="">
               <img src="robofriends.jpg" class="img-fluid  shadow-2-strong" style="margin-bottom: 20px;" />
-              <a href="#!">
+              <a href="https://viktorlinus.github.io/robo/">
               </a>
 
               <img src="smartbrain.jpg" class="img-fluid  shadow-2-strong" />
@@ -169,7 +169,7 @@
             <p class="text-muted">
               The first project I created was called RoboFriends, which is
               an app built with react to enable states within the app. This
-              minimizes the work the DOM has to perform. React is a very popular tool for front end development which I will learn more about in the future! Link to the webpage --> <a href="https://viktorlinus.github.io/robo_friends/" target="_blank">https://viktorlinus.github.io/robo_friends/</a>
+              minimizes the work the DOM has to perform. React is a very popular tool for front end development which I will learn more about in the future! Link to the webpage --> <a href="https://viktorlinus.github.io/robo/" target="_blank">https://viktorlinus.github.io/robo/</a>
             </p>
             <p><strong>SmartBrain API</strong></p>
             <p class="text-muted">
